--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^5.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
